Mon Sep 15 23:45:33 BST 2003  Byrial Ole Jensen  <byrial@image.dk>

	* po/da.po: Update from Translation Project.

Mon Sep 15 23:29:33 BST 2003  Colin Watson  <cjwatson@debian.org>

	* configure.in: Add --enable-mb-groff option, which defines
	  MULTIBYTE_GROFF for src/encodings.c.
	* docs/NEWS: Document this.

Mon Sep 15 01:23:00 BST 2003  Colin Watson  <cjwatson@debian.org>

	* po/it.po: msgfmt doesn't like "charset=iso8859-1". Use
	  "charset=iso-8859-1" instead.

Sun Sep 14 17:48:38 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_source_encoding): If the language directory
	  is unknown (e.g. 'man -l'), guess based on the locale before
	  falling back to a default.
	  (get_standard_output_encoding): Likewise.

Sun Sep 14 16:58:34 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_source_encoding): Assume ISO-8859-1 source
	  encoding if it's unknown (e.g. 'man -l').
	  (get_default_device): source_encoding can no longer be NULL.
	* src/man.c (make_roff_command): Likewise.

Sun Sep 14 16:45:43 BST 2003  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (EXAMPLES, ENVIRONMENT, HISTORY): Change a few
	  stray hyphens to dashes.

Sun Sep 14 16:37:56 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_source_encoding,
	  get_standard_output_encoding, get_default_device,
	  get_roff_encoding, get_output_encoding, get_less_charset):
	  Simplify using new table element struct types.

Sun Sep 14 16:24:00 BST 2003  Colin Watson  <cjwatson@debian.org>

	Make locales like ru_RU.UTF-8 that need the ascii8 device but UTF-8
	output work. This involves a good deal of restructuring.

	* src/encodings.c (directory_table): Remove a completed TODO
	  comment.
	  (directory_table, charset_table, device_table): Name array element
	  struct types in order to abbreviate code later.
	  (device_table): Split less_charset members out into a new table,
	  less_charset_table. They really depend on the locale charset, but